tests/ui/bad-struct.rs
use boolenum::BoolEnum;

#[derive(BoolEnum)]
struct StructInsteadOfEnum {
    yes: bool,
    no: bool,
}

fn main() {}
